css/launchcircle.css
/* ... */
body.ge .modal-body form:before {
    content: '* ist erforderlich';
}

.modal-body form .custom-control{
    display: table;
    border: 0;
}

.modal-body form .form-group .required,
.modal-body form label .required{
    font-size: 1.2em;
    color: red;
}

.modal-body form .form-group label{
    display: block;
}

.modal-body form > label.custom-checkbox {
    line-height: 1.65em;
}

.modal-body form input,
.modal-body form textarea {
    border: 0;
    border-bottom: 2px solid lightgray;
    width: 100%;
}

.modal-body form input:hover,
.modal-body form textarea:hover {
    border-bottom: 2px solid #12D4C4;
}

.modal-body form .custom-control-input:checked~.custom-control-indicator {
    background-color: #12D4C4;
}

.modal-body form input:focus,
.modal-body form textarea:focus {
    border-bottom: 2px solid #12D4C4;
    outline: none;
}

.modal-body form .custom-control-input:focus~.custom-control-indicator {
    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #898AEA;
}

.modal-body form label .custom-control-description,
.modal-body form input {
    color: rgba(41, 43, 44, .77);
}

.modal-body form .help-block.with-errors {
    color: #F63E3E;
    font-size: .8em;
}

.modal-content .modal-footer {
    justify-content: flex-start !important;
}

.modal-content .btn-primary.disabled,
.modal-content .btn-primary:disabled {
    background-color: dimgray;
    border-color: dimgray;
}

.modal-content .btn-primary.disabled:hover,
.modal-content .btn-primary:disabled:hover {
    background-color: darkgray;
    border-color: darkgray;
}

#subscribe-form .btn-primary.disabled,
#subscribe-form .btn-primary:disabled {
    background-color: rgba(18,212,196,1);
    border-color: rgba(18,212,196,1);
    color: #fff;
}

#subscribe-form input[type="email"]::-webkit-input-placeholder,
#subscribe-form input[type="email"]::-moz-placeholder,
#subscribe-form input[type="email"]:-moz-placeholder ,
#subscribe-form input[type="email"]:-ms-input-placeholder,
#subscribe-form input[type="email"]::placeholder,
#subscribe-form input[type="email"]:placeholder-shown {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#subscribe-form .btn-primary.disabled:hover,
#subscribe-form .btn-primary:disabled:hover {
    background-color: rgba(18,212,196,.8);
    border-color: rgba(18,212,196,.8);
    color: #fff;
    -webkit-box-shadow: none;
    box-shadow: none;
}

/* --------------------------------------
 Button style
-----------------------------------------*/

.btn {
    border-radius: 84px;
    position: relative;
    background-color: rgb(255, 255, 255);
    font-weight: bold;
    letter-spacing: 1px;
}

@media screen and (max-width: 390px) {
    main .btn, footer .btn {
        max-width: 78.5vw;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.btn-primary {
    background-color: rgba(18, 212, 196, 1);
    border-color: rgba(18, 212, 196, 1);
    color: #FFF;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
    background-color: rgba(18, 212, 196, 0.8);
    border-color: rgba(18, 212, 196, 0.8);
    color: #FFF;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn-secondary {
    border: 2px solid rgba(137, 138, 234, 1);
}

.btn-secondary:hover,
.btn-secondary:focus,
.btn-secondary:active {
    border-color: rgba(137, 138, 234, 0.8);
    background-color: rgb(255, 255, 255);
    color: rgba(137, 138, 234, 1);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn-info {
    min-height: 45px;
    min-width: 210px;
    border-color: rgba(137, 138, 234, 1);
    background-color: rgba(137, 138, 234, 1);
    box-shadow: 0 4px 7px 0 rgba(137, 138, 234, 0.48);
    line-height: 27px;
}

.btn-info:hover,
.btn-info:focus,
.btn-info:active {
    border-color: rgba(137, 138, 234, 0.9);
    background-color: rgba(137, 138, 234, 0.9);
    color: rgb(255, 255, 255);
    box-shadow: 0 4px 7px 0 rgba(137, 138, 234, 0.58);
}

.with-icon {
    padding-right: 42px;
    display: inline-block;
}

.with-icon::after {
    content: '';
    position: absolute;
    right: 10px;
    top: 50%;
    margin-top: -15px;
    display: block;
    width: 30px;
    height: 30px;
    background-color: rgba(158, 159, 250, 1);
    background-image: url("/images/arrow-pointing-to-right.svg");
    background-position: 50% 50%;
    background-repeat: no-repeat;
    border-radius: 100%;
}

.with-icon.green::after {
    background-color: rgba(51, 255, 238, 1);
}

.locale .custom-select {
    border-radius: 84px;
    border: 2px solid rgba(137, 138, 234, 1);
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    font-weight: bold;
    color: black;
}

header .locale .custom-select:hover {
    cursor: pointer;
}

@media screen and (min-width: 769px) and (max-width: 991px){
    header .navigation .btn {
        font-weight: 500 !important;
        color: rgba(87, 85, 89, 1);
        background: white;
        border: none;
    }
    header .navigation .btn:hover {
        color: rgba(137,138,234,1);
        text-decoration: none;
    }
}
@media screen and (max-width: 768px) {
    header .navigation .btn.btn-secondary,
    header .locale .custom-select {
        background-color: rgba(18,212,196,1);
        border-color: rgba(18,212,196,1);
        color: #fff;
    }
}

/* --------------------------------------
 Header
-----------------------------------------*/
header {
    position: relative;
    text-align: center;
    color: #fff;
    /*min-height: 430px;*/
}

header .header-nav .nav-link a {
    margin: 4px 20px 0 0;
    font-weight: 500;
    font-size: 14px;
    display: inline-block;
}

header .header-nav .nav-link a.dropdown-toggle:after {
    position: absolute;
    top: 50%;
}

@media screen and (max-width: 991px) {
    header .header-nav .nav-link a {
        margin: 0;
    }
}

header .header-nav .nav-link a.start {
    font-size: 14px;
    line-height: 21px;
    min-width: 168px;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 0;
}
/* ... */

